       if disk write activity > 500 operations/s then alert

New: Linux: Allow generic per-process I/O activity monitoring. Example:
       if read activity > 1 mb/s then alert
       if write activity > 1 mb/s then alert

New: Linux: Added detailed CPU statistics: "nice", "hardirq", "softirq", "steal", "guest", "guestnice". The statistics
for "nice" was orignally included in the "cpu user" statistics - it has now its own counter.

New: Issue #877: Linux: Add support for VxFS filesystem statistics. Thanks to Lutz Mader for patch.

New: Enable support for compilation with AddressSanitizer. Use "configure --with-asan" to enable.

Fixed: Issue #867: Monit crashed when executing programs when linked with musl libc. Thanks to Rich Felker for report.

Fixed: Monit did add the CPU wait% to the system CPU usage, which was wrong (the cpu was idle and waiting for I/O to complete).

Fixed: The per-process I/O statistics on Linux, AIX, DragonflyBSD, NetBSD, Solaris (displayed always 0 activity).

Fixed: Issue #843: Linux: Wrong memory usage reported in LXC container when ZFS filesystem is used. Monit
now uses MemAvailable on Linux when calculating the memory usage, so it will provide more accurate statistics.
Thanks to Joe LeVeque for patch.

Fixed: Issue #831: The HTTP protocol test returned "unknown transfer encoding HTTP error" in the case that
the response content or checksum test was used and the HTTP server didn't set the Content-Length nor used a
chunked encoding for response.

Fixed: Issue #880: If monit is linked with AddresSanitizer, it may crash when it generates an MD5 hash.
Thanks to Lutz Mader for patch.

Fixed: Issue #879: The HTML interface didn't escape strings that are part of monit configuration file.
Thanks to Hanno Boeck for report.

Fixed: Issue #872: Procmatch PID column show five digits only

Fixed: Issue #851: Linux and AIX: The length of the string that describes the process name and its arguments