@@ -2003,9 +2003,80 @@ queue per CPU core, averaged over the specified time period. Example:
 If you'll omit the I<per core> option, the test will check the total load average
 regardless of CPU cores count.
 
-I<CPU([user|system|wait])> is the percent of time the system spend
-in user or kernel space and waiting for I/O. The user/system/wait modifier
-is optional, if not used, the total system cpu usage is tested. Example:
+I<CPU([user|system|wait|nice|hardirq|softirq|steal|guest|guestnice])> is the percent
+of time the system spend in given type of task:
+=over 4
+
+=item user
+
+The CPU is running code in user space mode, which includes any process that doesn't belong
+to the kernel, such as webservers, databases, shells and desktop related programs.
+
+=item system
+
+The CPU is running the kernel, which includes drivers and other kernel modules. The kernel
+also handles requests from user space processes like memory allocation, disk and network I/O
+and creating child processes.
+
+=item wait
+
+I/O wait is when the CPU was idle while waiting for an I/O operation from disk or network to
+complete.
+
+=item nice
+
+The nice statistics accounts for user space processes that are running with altered priority
+(higher or lower then normal).
+
+=item hardirq
+
+The kernel is servicing hardware interrupt requests. Hardware interrupts come from peripherals
+like keyboard, network interfaces, disks, system clock, etc.
+
+=item softirq
+
+The kernel is servicing software interrupt requests. Software interrupts come from processes
+running in the system.
+
+=item steal
+
+This applies only to virtual machines on a hypervisor. The steal time shows the percentage of
+time a virtual machine had to wait the real CPU while the hypervisor was servicing another virtual
+machine. If this number remains high, the host system is too busy and may need more physical
+CPUs or offload some virtual machines to another host.
+
+=item guest
+
+This applies only to host machines running a hypervisor. It shows time spent running a virtual CPU
+for guest operating systems under the control of the Linux kernel. This value is already included in
+"user" statistics.
+
+=item guestnice
+
+This applies only to host machines running a hypervisor. It shows time spent running a virtual CPU
+for guest operating systems under the control of the Linux kernel, with altered priority. This value
+is already included in "nice" statistics.
+
+=back
+
+The user/system/wait/nice/hardirq/softirq/steal/guest/guestnice modifier is optional and the support
+depends on platform (Linux support depends on kernel version, all statistics are available since kernel
+2.6.33):
+
+ -----------------------------------------------------------------------------------------------
+ | Platform     | user | system | wait | nice | hardirq | softirq | steal | guest | guest nice |
+ -----------------------------------------------------------------------------------------------
+ | AIX          |  X   |   X    |  X   |      |         |         |       |       |            |
+ | DragonFlyBSD |  X   |   X    |      |      |         |         |       |       |            |
+ | FreeBSD      |  X   |   X    |      |      |         |         |       |       |            |
+ | Linux        |  X   |   X    |  X   |  X   |    X    |    X    |   X   |   X   |    X       |
+ | MacOS        |  X   |   X    |      |      |         |         |       |       |            |
+ | NetBSD       |  X   |   X    |      |      |         |         |       |       |            |
+ | OpenBSD      |  X   |   X    |      |      |         |         |       |       |            |
+ | Solaris      |  X   |   X    |  X   |      |         |         |       |       |            |
+ -----------------------------------------------------------------------------------------------
+
+Example:
 
  if cpu usage > 95% for 10 cycles then alert
 
