@@ -305,6 +305,12 @@ typedef enum {
         Resource_CpuUser,
         Resource_CpuSystem,
         Resource_CpuWait,
+        Resource_CpuNice,
+        Resource_CpuHardIRQ,
+        Resource_CpuSoftIRQ,
+        Resource_CpuSteal,
+        Resource_CpuGuest,
+        Resource_CpuGuestNice,
         Resource_CpuPercentTotal,
         Resource_SwapPercent,
         Resource_SwapKbyte,
