@@ -497,13 +497,85 @@ static State_Type _checkSystemResources(Service_T s, Resource_T r) {
 
                 case Resource_CpuWait:
                         if (systeminfo.cpu.usage.iowait < 0.) {
-                                DEBUG("'%s' cpu wait usage check skipped (initializing)\n", s->name);
+                                DEBUG("'%s' cpu I/O wait check skipped (initializing)\n", s->name);
                                 return State_Init;
                         } else if (Util_evalDoubleQExpression(r->operator, systeminfo.cpu.usage.iowait, r->limit)) {
                                 rv = State_Failed;
-                                snprintf(report, STRLEN, "cpu wait usage of %.1f%% matches resource limit [cpu wait usage %s %.1f%%]", systeminfo.cpu.usage.iowait, operatorshortnames[r->operator], r->limit);
+                                snprintf(report, STRLEN, "cpu I/O wait of %.1f%% matches resource limit [cpu I/O wait %s %.1f%%]", systeminfo.cpu.usage.iowait, operatorshortnames[r->operator], r->limit);
                         } else {
-                                snprintf(report, STRLEN, "cpu wait usage check succeeded [current cpu wait usage = %.1f%%]", systeminfo.cpu.usage.iowait);
+                                snprintf(report, STRLEN, "cpu I/O wait check succeeded [current cpu I/O wait = %.1f%%]", systeminfo.cpu.usage.iowait);
+                        }
+                        break;
+
+                case Resource_CpuNice:
+                        if (systeminfo.cpu.usage.nice < 0.) {
+                                DEBUG("'%s' cpu nice usage check skipped (initializing)\n", s->name);
+                                return State_Init;
+                        } else if (Util_evalDoubleQExpression(r->operator, systeminfo.cpu.usage.nice, r->limit)) {
+                                rv = State_Failed;
+                                snprintf(report, STRLEN, "cpu nice usage of %.1f%% matches resource limit [cpu nice usage %s %.1f%%]", systeminfo.cpu.usage.nice, operatorshortnames[r->operator], r->limit);
+                        } else {
+                                snprintf(report, STRLEN, "cpu nice usage check succeeded [current cpu nice usage = %.1f%%]", systeminfo.cpu.usage.nice);
+                        }
+                        break;
+
+                case Resource_CpuHardIRQ:
+                        if (systeminfo.cpu.usage.hardirq < 0.) {
+                                DEBUG("'%s' cpu hardware IRQ usage check skipped (initializing)\n", s->name);
+                                return State_Init;
+                        } else if (Util_evalDoubleQExpression(r->operator, systeminfo.cpu.usage.hardirq, r->limit)) {
+                                rv = State_Failed;
+                                snprintf(report, STRLEN, "cpu hardware IRQ usage of %.1f%% matches resource limit [cpu hardware IRQ usage %s %.1f%%]", systeminfo.cpu.usage.hardirq, operatorshortnames[r->operator], r->limit);
+                        } else {
+                                snprintf(report, STRLEN, "cpu hardware IRQ usage check succeeded [current cpu hardware IRQ usage = %.1f%%]", systeminfo.cpu.usage.hardirq);
+                        }
+                        break;
+
+                case Resource_CpuSoftIRQ:
+                        if (systeminfo.cpu.usage.softirq < 0.) {
+                                DEBUG("'%s' cpu software IRQ usage check skipped (initializing)\n", s->name);
+                                return State_Init;
+                        } else if (Util_evalDoubleQExpression(r->operator, systeminfo.cpu.usage.softirq, r->limit)) {
+                                rv = State_Failed;
+                                snprintf(report, STRLEN, "cpu software IRQ usage of %.1f%% matches resource limit [cpu software IRQ usage %s %.1f%%]", systeminfo.cpu.usage.softirq, operatorshortnames[r->operator], r->limit);
+                        } else {
+                                snprintf(report, STRLEN, "cpu software IRQ usage check succeeded [current cpu software IRQ usage = %.1f%%]", systeminfo.cpu.usage.softirq);
+                        }
+                        break;
+
+                case Resource_CpuSteal:
+                        if (systeminfo.cpu.usage.steal < 0.) {
+                                DEBUG("'%s' cpu steal usage check skipped (initializing)\n", s->name);
+                                return State_Init;
+                        } else if (Util_evalDoubleQExpression(r->operator, systeminfo.cpu.usage.steal, r->limit)) {
+                                rv = State_Failed;
+                                snprintf(report, STRLEN, "cpu steal usage of %.1f%% matches resource limit [cpu steal usage %s %.1f%%]", systeminfo.cpu.usage.steal, operatorshortnames[r->operator], r->limit);
+                        } else {
+                                snprintf(report, STRLEN, "cpu steal usage check succeeded [current cpu steal usage = %.1f%%]", systeminfo.cpu.usage.steal);
+                        }
+                        break;
+
+                case Resource_CpuGuest:
+                        if (systeminfo.cpu.usage.guest < 0.) {
+                                DEBUG("'%s' cpu guest usage check skipped (initializing)\n", s->name);
+                                return State_Init;
+                        } else if (Util_evalDoubleQExpression(r->operator, systeminfo.cpu.usage.guest, r->limit)) {
+                                rv = State_Failed;
+                                snprintf(report, STRLEN, "cpu guest usage of %.1f%% matches resource limit [cpu guest usage %s %.1f%%]", systeminfo.cpu.usage.guest, operatorshortnames[r->operator], r->limit);
+                        } else {
+                                snprintf(report, STRLEN, "cpu guest usage check succeeded [current cpu guest usage = %.1f%%]", systeminfo.cpu.usage.guest);
+                        }
+                        break;
+
+                case Resource_CpuGuestNice:
+                        if (systeminfo.cpu.usage.guest_nice < 0.) {
+                                DEBUG("'%s' cpu guest nice usage check skipped (initializing)\n", s->name);
+                                return State_Init;
+                        } else if (Util_evalDoubleQExpression(r->operator, systeminfo.cpu.usage.guest_nice, r->limit)) {
+                                rv = State_Failed;
+                                snprintf(report, STRLEN, "cpu guest nice usage of %.1f%% matches resource limit [cpu guest nice usage %s %.1f%%]", systeminfo.cpu.usage.guest_nice, operatorshortnames[r->operator], r->limit);
+                        } else {
+                                snprintf(report, STRLEN, "cpu guest nice usage check succeeded [current cpu guest nice usage = %.1f%%]", systeminfo.cpu.usage.guest_nice);
                         }
                         break;
 
