@@ -63,7 +63,7 @@ New: Linux: Allow generic per-process I/O activity monitoring. Example:
        if write activity > 1 mb/s then alert
 
 New: Linux: Added detailed CPU statistics: "nice", "hardirq", "softirq", "steal", "guest", "guestnice". The statistics
-for "nice" was orignally included in the "cpu user" statistics - it has now its own counter.
+for "nice" was originally included in the "cpu user" statistics - it has now its own counter.
 
 New: Issue #877: Linux: Add support for VxFS filesystem statistics. Thanks to Lutz Mader for patch.
 
@@ -71,7 +71,8 @@ New: Enable support for compilation with AddressSanitizer. Use "configure --with
 
 Fixed: Issue #867: Monit crashed when executing programs when linked with musl libc. Thanks to Rich Felker for report.
 
-Fixed: Monit did add the CPU wait% to the system CPU usage, which was wrong (the cpu was idle and waiting for I/O to complete).
+Fixed: Monit did incorrectly add the CPU wait% to the system CPU usage, which was wrong (the CPU is idle when it's in the
+"wait" state, waiting for the I/O to complete).
 
 Fixed: The per-process I/O statistics on Linux, AIX, DragonflyBSD, NetBSD, Solaris (displayed always 0 activity).
 
